fix: WEB-196 fixed an issue where the h3 titles where not aligned with the note icon

--- a/src/assets/scss/_macro-info-panel.scss
+++ b/src/assets/scss/_macro-info-panel.scss
@@ -37,6 +37,10 @@ div.confluence-information-macro {
     border-radius: 3px;
     padding: 10px 10px 10px 25px;
     box-shadow: var(--macro-info-panel-shadow);
+
+    span[role="presentation"] {
+      position: absolute;
+    }
   }
 }
 
